Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-79934

WASM - Qt Quick application does not have keyboard focus after loading

XMLWordPrintable

    • WebAssembly
    • Ibc9582254dda91eb14ebcdf4b8ea4a4f862aa88d, a1704ee6a (dev)

      If you start the following qml app on the desktop it will open the TextField has focus and you can start typing.
      If you start the same app on the browser it will look like the TextField has keyboard focus(Cursor blinking) but on typing something nothing happens. As soon as you click anywhere in the page it will start working.

      import QtQuick 2.12
      import QtQuick.Window 2.12
      import QtQuick.Controls 2.12
      
      Window {
          visible: true
          TextField{
              focus: true
          }
      }
      

        1. QTBUG-79934.gif
          122 kB
          Marscho
        2. Qt6.5.1_built_app.zip
          9.50 MB
          Marscho
        For Gerrit Dashboard: QTBUG-79934
        # Subject Branch Project Status CR V

            mikolaj.boc Mikołaj Boc (Inactive)
            Marscho Marscho
            Votes:
            3 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes