src/plugins/platforms/wasm/qwasmwindow.cpp
@@ -310,6 +310,8 @@ void QWasmWindow::setVisible(bool visible)
 
     m_compositor->requestUpdateWindow(this, QWasmCompositor::ExposeEventDelivery);
     m_qtWindow["style"].set("display", visible ? "block" : "none");
+    if (window()->isActive())
+        m_canvas.call<void>("focus");
     if (visible)
         applyWindowState();
 }
